<resources>
    <string name="app_name">Memo S+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="memo_list">메모 리스트</string>
    <string name="memo">메모장 S</string>
    <string name="settings">설정</string>
    <string name="write_memo">메모 작성</string>
    <string name="service_error">서비스를 이용하시려면 회원가입을 하셔야합니다.</string>
    <string name="share">공유</string>
    <string name="share_to_private">메모 비공개</string>
    <string name="share_to_public">메모 공개</string>
    <string name="picture">사진</string>
    <string name="main_text">본문</string>
    <string name="title">제목</string>
    <string name="write_input">입력</string>
    <string name="join_messages1">이메일은 비밀번호 재설정 및 비밀번호 찾기에 쓰이며 로그인 아이디 입니다. 연락 가능한 이메일로 가입해주세요.</string>
    <string name="profile_settings">프로필 설정</string>
    <string name="share_user_find">공유 대상자 찾기</string>
    <string name="share_user_list">공유 대상자 리스트</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="sign">회원가입</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="apphome">처음으로</string>
    <string name="profile_images">프로필 사진</string>
    <string name="join_messages2">연락 가능한 이메일을 입력해주세요.</string>
    <string name="join_messages3">독특한 닉네임을 정해주세요.</string>
    <string name="join_messages4">비밀번호를 입력해주세요.</string>
    <string name="join_messages5">비밀번호를 다시 입력해주세요.</string>
    <string name="all_memo_remove">전체 삭제</string>
    <string name="login_messages1">로그인을 하려면 이메일과 비밀번호를 입력해주세요.</string>
    <string name="email_duble">"이메일 : "</string>
    <string name="nickname_duble">닉네임 :</string>
    <string name="input_date_duble">입력 날짜 :</string>
    <string name="modify">수정</string>
    <string name="history_list">히스토리</string>
    <string name="history_remove">히스토리 삭제</string>
    <string name="share_private_messages">공유하지 않도록 수정하시겠습니까?\n확인을 누르면 이 메모는 나만 볼 수 있도록 설정합니다.</string>
    <string name="share_public_messages">유저에게 공유하시겠습니까?</string>
    <string name="write_remove_messages">글을 삭제 하시겠습니까?\n한번 삭제하면 복구할 수 없습니다.</string>
    <string name="history_remove_messages">히스토리를 삭제 하시겠습니까?\n 삭제한 히스토리는 절대 복구할수 없습니다.</string>
    <string name="remove">삭제</string>
    <string name="change_nickname">닉네임 바꾸기</string>
    <string name="change_password">비밀번호 바꾸기</string>
    <string name="change_password_messages">비밀번호를 입력해주세요.</string>
    <string name="sign_remove">회원탈퇴</string>
    <string name="share_top_messages">내 메모를 공유할 대상 검색</string>
    <string name="share_messages2">공유하고 싶은 상대의 이메일을 입력하세요</string>
    <string name="share_messages3">검색하신 이메일로는 일치하는 사람이 없습니다.\\n대문자 / 소문자를 구별하니 정확하게 입력하셔야 합니다.</string>
    <string name="app_check">Memo S+ 버전 확인</string>
    <string name="version_1">Memo S+ 버전</string>
    <string name="connect_user">글을 보고 있는 유저</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>