<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".userActivity.MemberSettings">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/icons_settings_size"
                android:paddingLeft="15dp"
                android:text="@string/profile_settings" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/MyColor_View_Line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textview_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_select_profile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/icons_profile_size"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/nanumbold"
                android:gravity="center"
                android:text="@string/profile_images"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:background="@drawable/profile_round_10dp"
                android:scaleType="fitXY" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textview_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_change_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/icons_signature_size"
                android:fontFamily="@font/nanumbold"
                android:gravity="center"
                android:text="@string/change_nickname"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/nanumregular"
                android:gravity="center"
                android:textColor="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textview_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_change_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/icons_signature_size"
                android:fontFamily="@font/nanumbold"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:visibility="visible"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/nanumbold"
                android:textColor="@color/MyColor_Pink"
                android:textSize="13sp"
                android:text="@string/change_password_messages"/>

            <EditText
                android:id="@+id/et_password1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:fontFamily="@font/nanumregular"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:background="@drawable/textview_white"/>

            <Button
                android:id="@+id/btn_change_password_commit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="right"
                android:fontFamily="@font/nanumregular"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:text="@string/change_password"
                android:background="@drawable/button_yellow"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/textview_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sign_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/icons_signature_size"
                android:fontFamily="@font/nanumbold"
                android:gravity="center"
                android:text="@string/sign_remove"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>