<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userActivity.MyInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/profile_round_10dp"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_login"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/icons_login_size"
                android:gravity="center_vertical"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tv_logout"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/icons_logout_size"
                android:gravity="center_vertical"
                android:text="@string/logout" />

            <TextView
                android:id="@+id/tv_signature"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/icons_register_size"
                android:gravity="center_vertical"
                android:text="@string/sign" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/MyColor_View_Line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_email"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/textview_white"
                android:drawableLeft="@drawable/icons_id_size"
                android:paddingLeft="15dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/textview_white"
                android:drawableLeft="@drawable/icons_signature_size"
                android:paddingLeft="15dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_profile_settings"
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/textview_white"
                    android:drawableLeft="@drawable/icons_settings_size"
                    android:paddingLeft="15dp"
                    android:text="@string/profile_settings" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_search_friend"
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/textview_white"
                    android:drawableLeft="@drawable/icons_share_size"
                    android:paddingLeft="15dp"
                    android:text="@string/share_user_find" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_friend_list"
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/textview_white"
                    android:drawableLeft="@drawable/icons_share_list_size"
                    android:paddingLeft="15dp"
                    android:text="@string/share_user_list" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_app_update"
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/textview_white"
                    android:drawableLeft="@drawable/icons_update_size"
                    android:paddingLeft="15dp"
                    android:text="@string/app_check" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:fontFamily="@font/nanumregular"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:autoLink="email"
                android:text="이메일 : cjmkeke@naver.com"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:fontFamily="@font/nanumbold"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:text="도움 받는 사이트 / 이미지"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:fontFamily="@font/nanumregular"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:autoLink="all"
                android:text="https://www.flaticon.com/"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:fontFamily="@font/nanumregular"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:autoLink="all"
                android:text="https://github.com/bumptech/glide"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:fontFamily="@font/nanumregular"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:text="네이버 나눔글꼴, 롯데 폰트"/>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>